--- a/css/agency.css
+++ b/css/agency.css
@@ -109,7 +109,7 @@ img::-moz-selection {
 }
 
 #mainNav {
-  background-color: #212529;
+  background-color: #3D4A52;
 }
 
 #mainNav .navbar-toggler {
@@ -117,7 +117,7 @@ img::-moz-selection {
   right: 0;
   padding: 13px;
   text-transform: uppercase;
-  color: white;
+  color: #E3DDC3;
   border: 0;
   background-color: #3D4A52;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -137,7 +137,7 @@ img::-moz-selection {
   font-weight: 400;
   padding: 0.75em 0;
   letter-spacing: 1px;
-  color: white;
+  color: #E3DDC3;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -152,7 +152,7 @@ img::-moz-selection {
     -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.25);
   }
   #mainNav .navbar-brand {
     font-size: 1.75em;
@@ -282,7 +282,7 @@ header.masthead .intro-text .intro-heading {
   margin: 0 auto;
   padding: 25px;
   text-align: center;
-  background-color: #fff;
+  background-color: #E3DDC3;
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
@@ -598,7 +598,7 @@ section#contact {
 }
 
 section#contact .section-heading {
-  color: #fff;
+  color: #E3DDC3;
 }
 
 section#contact .form-group {
