--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -2,7 +2,7 @@
 
 // Restated Bootstrap Variables
 
-$white: #fff !default;
+$white: #E3DDC3 !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
