--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,6 +1,6 @@
 // Styling for the navbar
 #mainNav {
-  background-color: #3D4A52;
+  background-color: black;
   .navbar-toggler {
     font-size: 12px;
     right: 0;
