--- a/scss/layout/_masthead.scss
+++ b/scss/layout/_masthead.scss
@@ -29,20 +29,26 @@ header.masthead {
 @media(min-width:768px) {
   header.masthead {
     .intro-text {
-      padding-top: 300px;
-      padding-bottom: 200px;
+      padding-top: 200px;
+      padding-bottom: 400px;
+      .intro-box{
+        border-style: none;
+        background: rgba($primary, 0.6);
+        padding:15px;
+        box-sizing: border-box;
+        width:60%;
+      }
       .intro-lead-in {
-        font-size: 40px;
+        text-align: left;
+        font-size: 35px;
         font-style: italic;
-        line-height: 40px;
-        margin-bottom: 25px;
         @include serif-font;
       }
       .intro-heading {
+        text-align: left;
         font-size: 75px;
         font-weight: 700;
         line-height: 75px;
-        margin-bottom: 50px;
         @include heading-font;
       }
     }
