--- a/css/agency.css
+++ b/css/agency.css
@@ -223,12 +223,14 @@ header.masthead .intro-text .intro-heading {
     padding: 15px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    width: 60%;
+    width: 75%;
   }
   header.masthead .intro-text .intro-lead-in {
     text-align: left;
     font-size: 35px;
     font-style: italic;
+    line-height: 35px;
+    text-overflow: ellipsis;
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
   header.masthead .intro-text .intro-heading {
